# vox

./: .gitignore  README.md  Vox.command  Vox.spec  launcher.py  pyproject.toml
src/vox/: __init__.py  app.py  app_darwin.py  app_linux.py  audio.py  config.py  hotkeys.py  insert.py  insert_linux.py  transcribe.py  transcribe_worker.py
systemd/: README.md  vox.service
tests/: __init__.py  conftest.py  test_audio.py  test_hotkeys.py  test_insert.py  test_integration.py  test_transcribe.py
tests/fixtures/: sample_audio.m4a
tests/test_e2e/: __init__.py  agent_harness.py  test_agent_e2e.py
